Kubernetes/vagrant/k8s-cluster-auto/files/monitoring/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
  name: grafana-ingress
  namespace: grafana
spec:
  rules:
  - host: monitoring.server.com
    http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana-dashboard
          servicePort: 80
