Kubernetes/vagrant/k8s-cluster-auto/files/monitoring/monitoring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
  name: monitoring-ingress
  namespace: default
spec:
  rules:
  - host: monitoring.server.com
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus-server
          servicePort: 80
      - path: /grafana
        backend:
          serviceName: grafana-dashboard
          servicePort: 80
